--- a/Campus Activity Hub PRO/Views/Shared/_Layout.cshtml
+++ b/Campus Activity Hub PRO/Views/Shared/_Layout.cshtml
@@ -29,6 +29,14 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="Events" asp-action="Index">Events</a>
                         </li>
+                        @if (User.IsInRole("Student"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Registrations" asp-action="My">
+                                    My Events
+                                </a>
+                            </li>
+                        }
                         @if (User.IsInRole("Admin"))
                         {
                             <li class="nav-item">
@@ -56,6 +64,7 @@
                                 <a class="nav-link text-danger" asp-controller="Account" asp-action="Logout">Logout</a>
                             </li>
                         }
+                        
                     </ul>
                 </div>
             </div>
@@ -68,9 +77,7 @@
         </main>
     </div>
 
-    <footer>
-        &copy; 2026 - Campus Activity Hub PRO | <a asp-controller="Home" asp-action="Privacy">Privacy</a>
-    </footer>
+
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
