Translate text for English

--- a/Campus Activity Hub PRO/Views/Dashboard/Index.cshtml
+++ b/Campus Activity Hub PRO/Views/Dashboard/Index.cshtml
@@ -7,13 +7,13 @@
 
 <hr />
 
-<h4>Події за категоріями</h4>
+<h4>Events by category</h4>
 <canvas id="categoriesChart"></canvas>
 
-<h4 class="mt-4">ТОП-5 найпопулярніших подій</h4>
+<h4 class="mt-4">TOP-5 most popular events</h4>
 <canvas id="topEventsChart"></canvas>
 
-<h4 class="mt-4">Реєстрації за місяцями</h4>
+<h4 class="mt-4">Registrations by month</h4>
 <canvas id="registrationsChart"></canvas>
 
 @using System.Text.Json
