--- a/Campus Activity Hub PRO/Views/Account/Register.cshtml
+++ b/Campus Activity Hub PRO/Views/Account/Register.cshtml
@@ -33,7 +33,7 @@
     </div>
 
     <div class="mb-3">
-        <label asp-for="Role" class="form-label">Роль</label>
+        <label asp-for="Role" class="form-label">Role</label>
         <select asp-for="Role" class="form-select">
             <option value="Student">Student</option>
             <option value="Organizer">Organizer</option>
