Updateв controllers | added SeedData to IdentitySeeder | Updated Migrations | Added and updated Pages | Updated Layout | Updated Program.cs

--- a/Campus Activity Hub PRO/Views/Events/Index.cshtml
+++ b/Campus Activity Hub PRO/Views/Events/Index.cshtml
@@ -9,31 +9,30 @@
 {
     <a class="btn btn-success mb-3" asp-action="Create">Create New Event</a>
 }
+<input type="text"
+       id="searchInput"
+       class="form-control mb-3"
+       placeholder="Search events..." />
 
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th>Title</th>
-            <th>Category</th>
-            <th>Date</th>
-            <th>Organizer</th>
-            <th>Capacity</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var ev in Model)
-        {
-            <tr>
-                <td>@ev.Title</td>
-                <td>@ev.Category?.Name</td>
-                <td>@ev.EventDate.ToString("dd.MM.yyyy HH:mm")</td>
-                <td>@ev.Organizer?.Name</td>
-                <td>@ev.Capacity</td>
-                <td>
-                    <a asp-action="Details" asp-route-id="@ev.Id" class="btn btn-sm btn-primary">Details</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+<div id="eventsContainer">
+    @await Html.PartialAsync("_EventsTable", Model)
+</div>
+
+@section Scripts {
+    <script>
+        const input = document.getElementById("searchInput");
+        let timeout = null;
+
+        input.addEventListener("keyup", function () {
+            clearTimeout(timeout);
+
+            timeout = setTimeout(() => {
+                fetch(`/Events/Search?search=${encodeURIComponent(input.value)}`)
+                    .then(res => res.text())
+                    .then(html => {
+                        document.getElementById("eventsContainer").innerHTML = html;
+                    });
+            }, 300); 
+        });
+    </script>
+}
